--- a/Web/index.html
+++ b/Web/index.html
@@ -11,8 +11,18 @@
             <h3>NFL DRAFT ASSISTANT PROJECT</h3>
         </div>
     </nav>
+    <div class="info">
+        <h3>Please Input your Information</h3>
+    </div>
 
-    <a href='https://www.freepik.com/photos/background'>Background photo created by jcomp - www.freepik.com</a>
+    <div class="form">
+        <label for="name" class="label-name">
+            <span class="content-name">Name</span>
+        </label>
+        <input type="text" name="name" autocomplete="off" required />
+    </div>
+
+    <button>Submit</button>
 
 </body>
 </html>
