--- a/Web/index.html
+++ b/Web/index.html
@@ -15,14 +15,12 @@
         <h3>Please Input your Information</h3>
     </div>
 
-    <div class="form">
-        <label for="name" class="label-name">
-            <span class="content-name">Name</span>
-        </label>
-        <input type="text" name="name" autocomplete="off" required />
-    </div>
-
-    <button>Submit</button>
+    <form class="form">
+        <label for="name" class="label-name">Name</label><br>
+        <input type="text" name="name" autocomplete="off" required /><br>
+        <label for="name" class="label-name">Height</label><br>
+        <input type="text" name="height" autocomplete="off" required /><br>
+    </form>
 
 </body>
 </html>
